--- a/service/package.json
+++ b/service/package.json
@@ -24,6 +24,7 @@
     "common:cleanup": "rimraf node_modules && rimraf pnpm-lock.yaml"
   },
   "dependencies": {
+    "basic-auth": "^2.0.1",
     "chatgpt": "^5.0.8",
     "dotenv": "^16.0.3",
     "esno": "^0.16.3",
